--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>ReVeste Home</title>
     <link rel="stylesheet" href="_css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+    
+    <link rel="stylesheet" href="_css/header.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
@@ -332,7 +334,7 @@
       <div class="texto-doe-roupas">
         <h1>Troque por Descontos incríveis</h1>
         <p>Use os pontos das suas doações para economizar nas roupas da nossa loja!</p>
-        <a href="doacao.html"><button>VER PROMOÇÕES</button></a>
+        <a href="trocar_pontos.html"><button>VER PROMOÇÕES</button></a>
       </div>
     
       <div class="imagem_propaganda-doacao">
