--- a/sobre.html
+++ b/sobre.html
@@ -14,6 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="_css/header.css">
 </head>
 
 <body>
@@ -38,7 +40,7 @@
                 <a href="#" title="Buscar"><i class="fa-solid fa-magnifying-glass"></i></a>
                 <a href="#" title="Carrinho"><i class="fa-solid fa-bag-shopping"></i></a>
                 <a href="login.html" title="Login"><i class="fa-solid fa-user"></i></a>
-                <a href="login.html" title="Login"><i class="fa-solid fa-medal"></i></a>
+                <a href="trocar_pontos.html" title="Login"><i class="fa-solid fa-medal"></i></a>
             </div>
         </div>
     </header>
