--- a/shop_masculino.html
+++ b/shop_masculino.html
@@ -6,7 +6,7 @@
     <title>Masculino</title>
     <link rel="stylesheet" href="_css/shop_masculino.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
+    <link rel="stylesheet" href="_css/header.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
           <i class="fas fa-shopping-cart"></i>
         </a>
         <a href="login.html" title="Login"><i class="fa-solid fa-user"></i></a>
-        <a href="login.html" title="Pontos"><i class="fa-solid fa-medal"></i></a>
+        <a href="trocar_pontos.html" title="Pontos"><i class="fa-solid fa-medal"></i></a>
       </div>
       </div>
       </header>
